controls/terraform-best-practices/ec2/api/check-vpc-default-security-group-closed/test/good-test/good-payload-01.json
{
    "SecurityGroups": [
        {
            "Description": "default VPC security group",
            "GroupName": "default",
            "IpPermissions": [],
            "OwnerId": "xxxx",
            "GroupId": "sg-0b0ad5348432fe2ca",
            "IpPermissionsEgress": [],
            "VpcId": "vpc-0a0e88c4f0aa13753"
        }
    ]
}
